Fix broken image-layouts on mobile devices

--- a/less/style.less
+++ b/less/style.less
@@ -384,7 +384,6 @@ nav a:hover {
 
       .project-image {
           width: 100%;
-          height: 100%;
           position: relative;
           margin-bottom: 1rem;
 
@@ -511,6 +510,7 @@ nav a:hover {
       .project-image {
         height: 100%;
       }
+
       .project-image,
       .description-text {
         width: 50%;
